@@ -3,17 +3,16 @@ package com.myhomelibcorp.infrastructure.persistence.sqlite;
 import com.myhomelibcorp.application.port.out.infrastructure.CollectionStorageManager;
 import com.myhomelibcorp.domain.model.collection.Collection;
 import com.myhomelibcorp.infrastructure.collection.CollectionManager;
+import com.myhomelibcorp.infrastructure.collection.CollectionDatabasePathResolver;
+import com.myhomelibcorp.shared.util.AppPaths;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.lucene.store.Directory;
-import org.apache.lucene.store.FSDirectory;
 import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Component;
 
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 @Component
 @RequiredArgsConstructor
@@ -34,50 +33,37 @@ public class SqliteCollectionStorageManager implements CollectionStorageManager 
     @Override
     public void deletePhysicalFiles(Collection collection) {
         // 1. Видалення файлу БД
-        String dbPath = collection.getDbFile();
-        if (dbPath != null && !dbPath.isBlank()) {
-            try {
-                Path dbFile = Paths.get(dbPath);
-                if (Files.exists(dbFile)) {
-                    Files.delete(dbFile);
-                    log.info("Видалено файл БД: {}", dbPath);
-                }
-            } catch (IOException e) {
-                log.error("Не вдалося видалити файл БД: {}", dbPath, e);
+        Path dbFile = CollectionDatabasePathResolver.resolve(collection);
+        try {
+            if (Files.exists(dbFile)) {
+                Files.delete(dbFile);
+                Files.deleteIfExists(Path.of(dbFile + "-wal"));
+                Files.deleteIfExists(Path.of(dbFile + "-shm"));
+                log.info("Видалено файл БД: {}", dbFile);
             }
+        } catch (IOException e) {
+            log.error("Не вдалося видалити файл БД: {}", dbFile, e);
         }
 
-        // 2. Видалення Lucene індексу
+        // 2. Видалення активного per-collection Lucene індексу та freshness marker.
         try {
-            Path indexDir = Paths.get(System.getProperty("user.home"),
-                    ".myhomelibcorp", "search-index-" + collection.getId());
+            Path indexDir = AppPaths.collectionSearchIndexDir(collection.getId());
             if (Files.exists(indexDir)) {
-                // Закриваємо директорію, якщо вона відкрита
-                try (Directory dir = FSDirectory.open(indexDir)) {
-                    // просто закриваємо
-                }
                 deleteDirectory(indexDir);
-                log.info("Видалено Lucene індекс: {}", indexDir);
+                log.info("Видалено per-collection Lucene індекс: {}", indexDir);
             }
+            Files.deleteIfExists(AppPaths.collectionSearchIndexStateFile(collection.getId()));
+
+            // Best-effort cleanup of the pre-v7.1 experimental location.
+            Path legacyIndexDir = AppPaths.dataDir().resolve("search-index-" + collection.getId());
+            if (Files.exists(legacyIndexDir)) deleteDirectory(legacyIndexDir);
         } catch (Exception e) {
-            log.error("Не вдалося видалити Lucene індекс", e);
+            log.error("Не вдалося видалити per-collection Lucene індекс", e);
         }
 
-        // 3. Видалення кешу обкладинок (якщо є)
+        // 3. Видалення тимчасових файлів (якщо є)
         try {
-            Path coverCacheDir = Paths.get(System.getProperty("user.home"),
-                    ".myhomelibcorp", "covers-" + collection.getId());
-            if (Files.exists(coverCacheDir)) {
-                deleteDirectory(coverCacheDir);
-                log.info("Видалено кеш обкладинок: {}", coverCacheDir);
-            }
-        } catch (Exception e) {
-            log.error("Не вдалося видалити кеш обкладинок", e);
-        }
-
-        // 4. Видалення тимчасових файлів (якщо є)
-        try {
-            Path tempDir = Paths.get(System.getProperty("java.io.tmpdir"),
+            Path tempDir = Path.of(System.getProperty("java.io.tmpdir"),
                     "myhomelib-import-" + collection.getId());
             if (Files.exists(tempDir)) {
                 deleteDirectory(tempDir);
@@ -89,15 +75,15 @@ public class SqliteCollectionStorageManager implements CollectionStorageManager 
     }
 
     @Override
-    public void vacuum(Collection collection) {
+    public void vacuumCurrent() {
         try {
             JdbcTemplate jt = collectionManager.getCurrentJdbcTemplate();
             if (jt != null) {
                 jt.execute("VACUUM;");
-                log.info("VACUUM виконано для колекції: {}", collection.getId());
+                log.info("VACUUM виконано для активної колекції");
             }
         } catch (Exception e) {
-            log.error("Помилка VACUUM для колекції: {}", collection.getId(), e);
+            log.error("Помилка VACUUM для активної колекції", e);
         }
     }
 
