@@ -12,7 +12,6 @@ import org.springframework.jdbc.core.JdbcTemplate;
 import org.springframework.stereotype.Component;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -58,20 +57,20 @@ public class BookAuthorHelper {
     public void loadAuthorsForBooks(List<Book> books) {
         if (books.isEmpty()) return;
         JdbcTemplate jdbcTemplate = getJdbcTemplate();
-        List<String> bookIds = books.stream().map(b -> b.getId().asString()).collect(Collectors.toList());
-        String placeholders = String.join(",", bookIds.stream().map(id -> "?").toArray(String[]::new));
-        String sql = """
-            SELECT b.book_id, a.id, a.first_name, a.middle_name, a.last_name
-            FROM book_authors b
-            JOIN authors a ON b.author_id = a.id
-            WHERE b.book_id IN (""" + placeholders + ")";
-
+        List<String> bookIds = books.stream().map(b -> b.getId().asString()).toList();
         Map<String, List<Author>> authorMap = new HashMap<>();
-        jdbcTemplate.query(sql, (rs) -> {
-            String bookId = rs.getString("book_id");
-            Author author = authorRowMapper.mapRow(rs, 0);
-            authorMap.computeIfAbsent(bookId, k -> new ArrayList<>()).add(author);
-        }, bookIds.toArray());
+        SqliteInClauseSupport.forEachChunk(bookIds, part -> {
+            String sql = """
+                    SELECT b.book_id, a.id, a.first_name, a.middle_name, a.last_name
+                    FROM book_authors b
+                    JOIN authors a ON b.author_id = a.id
+                    WHERE b.book_id IN (""" + SqliteInClauseSupport.placeholders(part.size()) + ")";
+            jdbcTemplate.query(sql, rs -> {
+                String bookId = rs.getString("book_id");
+                Author author = authorRowMapper.mapRow(rs, 0);
+                authorMap.computeIfAbsent(bookId, k -> new ArrayList<>()).add(author);
+            }, part.toArray());
+        });
 
         for (Book book : books) {
             List<Author> authors = authorMap.getOrDefault(book.getId().asString(), List.of());
